--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -21,7 +21,7 @@
         android:text="현 위치로"
         style="@style/body"
         android:textColor="@color/white"
-        android:background="@drawable/user_cl_bg_green"
+        android:background="@color/green"
         android:paddingHorizontal="16dp"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="64dp"
@@ -35,7 +35,7 @@
         android:layout_height="40dp"
         android:layout_marginBottom="64dp"
         android:layout_marginEnd="12dp"
-        android:background="@drawable/user_cl_bg_green"
+        android:background="@color/green"
         android:paddingHorizontal="16dp"
         android:text="테스트 버튼 1"
         android:textColor="@color/white"
@@ -49,7 +49,7 @@
         android:layout_height="40dp"
         android:layout_marginBottom="64dp"
         android:layout_marginEnd="12dp"
-        android:background="@drawable/user_cl_bg_green"
+        android:background="@color/green"
         android:paddingHorizontal="16dp"
         android:text="테스트 버튼 2"
         android:textColor="@color/white"
