--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -7,15 +7,31 @@
     android:layout_height="match_parent"
     tools:context=".ui.SignIn.SignUpActivity">
 
+    <!-- 프로필 이미지를 표시할 ImageView -->
     <ImageView
-        android:id="@+id/iv_logo"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:id="@+id/iv_profile"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
         android:layout_marginTop="80dp"
-        android:src="@drawable/icon_logo"
+        android:layout_marginBottom="16dp"
+        android:scaleType="centerCrop"
+        android:background="@drawable/shape_profile"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+
+    <!-- 카메라 아이콘을 표시할 ImageButton -->
+    <Button
+        android:id="@+id/btn_profile"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:hint="사진 설정하세요"
+        android:background="@android:color/transparent"
+        app:layout_constraintBottom_toBottomOf="@+id/iv_profile"
+        app:layout_constraintEnd_toEndOf="@+id/iv_profile"
+        app:layout_constraintStart_toStartOf="@+id/iv_profile"
+        app:layout_constraintTop_toTopOf="@+id/iv_profile" />
 
 
     <com.google.android.material.textfield.TextInputLayout
@@ -28,7 +44,7 @@
         android:hint="@string/input_phone_number"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/iv_logo">
+        app:layout_constraintTop_toBottomOf="@+id/iv_profile">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/input_phone_number"
@@ -99,7 +115,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="18dp"
         android:layout_marginTop="24dp"
-        android:background="@drawable/bg_btn_login"
+        android:background="@drawable/shape_btn_login"
         android:text="@string/btn_signup"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
