--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -47,4 +47,9 @@
         <item name="android:textColor">@color/black</item>
         <item name="android:textSize">12sp</item>
     </style>
+
+    <style name="NumberPicker">
+        <item name="colorControlNormal">@color/green</item>
+        <item name="android:textColorPrimary">@color/dark_gray</item>
+    </style>
 </resources>
