--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,9 +2,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_home"
+        android:id="@+id/navigation_take"
         android:icon="@drawable/icon_home"
         android:title="@string/title_home" />
+
+    <item
+        android:id="@+id/navigation_home"
+        android:icon="@drawable/icon_search"
+        android:title="@string/title_search" />
 
     <item
         android:id="@+id/navigation_map"
