--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,13 +9,19 @@
         android:id="@+id/navigation_home"
         android:name="com.blackcows.butakaeyak.ui.home.HomeFragment"
         android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+
+
+    </fragment>
 
     <fragment
         android:id="@+id/navigation_map"
         android:name="com.blackcows.butakaeyak.ui.map.MapFragment"
         android:label="@string/title_map"
-        tools:layout="@layout/fragment_map" />
+        tools:layout="@layout/fragment_map" >
+
+
+    </fragment>
 
     <fragment
         android:id="@+id/navigation_user"
