--- a/app/src/main/res/layout/fragment_take.xml
+++ b/app/src/main/res/layout/fragment_take.xml
@@ -4,7 +4,72 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.take.fragment.TakeFragment">
+    tools:context=".ui.take.fragment.TakeFragment"
+    android:padding="10dp">
+
+    <ImageView
+        android:id="@+id/logo_iv"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+
+        android:src="@drawable/medicine"
+        />
+    
+    <TextView
+        android:id="@+id/today_date_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        app:layout_constraintTop_toTopOf="@id/logo_iv"
+        app:layout_constraintBottom_toBottomOf="@id/logo_iv"
+        app:layout_constraintStart_toEndOf="@id/logo_iv"
+
+        android:layout_marginStart="10dp"
+
+        android:text="9월 3일 월요일"
+        style="@style/subtitle_b"
+        />
+
+    <View
+        android:id="@+id/division"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+
+        app:layout_constraintTop_toBottomOf="@id/logo_iv"
+        app:layout_constraintStart_toStartOf="parent"
+
+        android:layout_marginTop="10dp"
+
+        android:background="@color/back_500"
+        />
+
+    <TextView
+        android:id="@+id/today_medicine_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        app:layout_constraintTop_toBottomOf="@id/division"
+        app:layout_constraintStart_toStartOf="parent"
+
+        android:layout_marginTop="10dp"
+
+        android:text="@string/today_medicine"
+        style="@style/subtitle"
+        />
+
+    <ListView
+        android:id="@+id/today_medicine_lv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+        app:layout_constraintTop_toBottomOf="@id/today_medicine_tv"
+        app:layout_constraintStart_toStartOf="parent"
+        />
+
+
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_add"
@@ -18,15 +83,8 @@
         android:layout_marginTop="40dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:layout_marginHorizontal="24dp"
-        app:layout_constraintTop_toBottomOf="@id/btn_add"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        android:visibility="gone"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
