--- a/app/src/main/res/layout/dialog_timepicker.xml
+++ b/app/src/main/res/layout/dialog_timepicker.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- res/layout/dialog_custom_time_picker.xml -->
+
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="250dp"
     android:layout_height="300dp"
@@ -36,13 +36,13 @@
         app:layout_constraintTop_toBottomOf="@id/customTimePicker">
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btn_cancle"
+            android:id="@+id/btn_cancel"
             android:layout_width="wrap_content"
             android:layout_height="30dp"
             android:text="취소"
             android:textColor="@color/white"
             style="@style/body_b"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="32dp"
             android:background="@drawable/user_cl_bg_green_radius"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -55,7 +55,7 @@
             android:text="저장"
             android:textColor="@color/white"
             style="@style/body_b"
-            android:layout_marginEnd="16dp"
+            android:layout_marginEnd="32dp"
             android:background="@drawable/user_cl_bg_green_radius"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
