--- a/app/src/main/res/layout/fragment_cycle.xml
+++ b/app/src/main/res/layout/fragment_cycle.xml
@@ -51,6 +51,15 @@
         app:layout_constraintTop_toBottomOf="@+id/tv_cycle_name"
         app:layout_constraintStart_toStartOf="@+id/tv_cycle_name"/>
 
+    <ImageView
+        android:id="@+id/iv_cycle_form"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="12dp"
+        app:layout_constraintTop_toTopOf="@id/tv_cycle_form"
+        app:layout_constraintBottom_toBottomOf="@id/tv_cycle_form"
+        app:layout_constraintStart_toEndOf="@id/tv_cycle_form"/>
+
     <androidx.core.widget.NestedScrollView
         android:id="@+id/scrollView"
         android:layout_width="match_parent"
@@ -150,6 +159,7 @@
             <TextView
                 android:id="@+id/tv_cycle_one_alarm_time"
                 style="@style/body_b"
+                android:text=""
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="12dp"
@@ -244,6 +254,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="12dp"
+                android:text=""
                 app:layout_constraintBottom_toBottomOf="@id/iv_cycle_two_alarm"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@id/iv_cycle_two_alarm" />
@@ -276,6 +287,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="12dp"
+                android:text=""
                 app:layout_constraintBottom_toBottomOf="@id/iv_cycle_two_alarm_2"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@id/iv_cycle_two_alarm_2" />
@@ -366,6 +378,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="12dp"
+                android:text=""
                 app:layout_constraintBottom_toBottomOf="@id/iv_cycle_three_alarm"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@id/iv_cycle_three_alarm" />
@@ -396,6 +409,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="12dp"
+                android:text=""
                 app:layout_constraintBottom_toBottomOf="@id/iv_cycle_three_alarm_2"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@id/iv_cycle_three_alarm_2" />
@@ -427,6 +441,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="12dp"
+                android:text=""
                 app:layout_constraintBottom_toBottomOf="@id/iv_cycle_three_alarm_3"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@id/iv_cycle_three_alarm_3" />
