--- a/app/src/main/res/layout/item_recyclerview_take.xml
+++ b/app/src/main/res/layout/item_recyclerview_take.xml
@@ -15,23 +15,22 @@
         app:layout_constraintStart_toStartOf="parent"/>
 
     <TextView
-        android:id="@+id/tv_medicine_form_name"
+        android:id="@+id/tv_medicine_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:text="정제"
+        android:text="두통약"
         style="@style/body_b"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@id/iv_medicine_form"/>
 
-    <CheckBox
-        android:id="@+id/cb_medicine_form"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:button="@android:color/transparent"
-        android:background="@drawable/take_checkbox_bg"
-        android:layout_marginEnd="16dp"
+    <ImageView
+        android:id="@+id/iv_delete"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginEnd="30dp"
+        android:src="@drawable/baseline_cancel_24dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
