--- a/app/src/main/res/layout/today_medicine_item.xml
+++ b/app/src/main/res/layout/today_medicine_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -15,6 +16,7 @@
         app:layout_constraintStart_toStartOf="parent"
 
         android:layout_marginStart="50dp"
+        android:layout_marginTop="10dp"
 
         android:text="18:50"
         android:textStyle="bold"
@@ -23,21 +25,34 @@
         />
 
     <ListView
-        android:id="@+id/listView"
-        android:layout_width="match_parent"
+        android:id="@+id/medicine_lv"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:dividerHeight="10dp" />
 
-    <Button
+        android:layout_marginHorizontal="15dp"
+        android:dividerHeight="5dp"
+
+        app:layout_constraintEnd_toEndOf="parent"
+
+        app:layout_constraintHorizontal_bias="0.448"
+        app:layout_constraintStart_toEndOf="@id/alarm_time_tv"
+        tools:layout_editor_absoluteY="-210dp" />
+
+    <TextView
         android:id="@+id/expandButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+
+        app:layout_constraintTop_toBottomOf="@id/medicine_lv"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+
+        android:layout_marginTop="10dp"
+
         android:text="더보기"
+        android:textColor="@color/white"
+        android:textSize="18sp"
         android:visibility="gone"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="16dp" />
-        
-
-
+         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
