--- a/app/src/main/res/layout/fragment_take.xml
+++ b/app/src/main/res/layout/fragment_take.xml
@@ -163,44 +163,68 @@
 
 
 
-        <TextView
-            android:id="@+id/my_medicine_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-
-            app:layout_constraintTop_toBottomOf="@id/today_medicine_rv"
-            app:layout_constraintStart_toStartOf="parent"
-
-            android:layout_marginTop="32dp"
-            android:layout_marginStart="22dp"
-
-            android:text="@string/my_medicine"
-            style="@style/subtitle"
-            />
-
-        <View
-            android:id="@+id/division2"
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-
-            app:layout_constraintTop_toBottomOf="@id/my_medicine_tv"
-
-            android:layout_marginTop="4dp"
-
-            android:background="@color/any_200"
-            />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/my_medicine_rv"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
 
-            app:layout_constraintTop_toBottomOf="@id/my_medicine_tv"
+            android:paddingTop="16dp"
+            android:paddingBottom="32dp"
 
-            android:layout_marginTop="5dp"
-            tools:listitem="@layout/my_medicine_item"
-            tools:itemCount="4"
-            />
+            >
+            <TextView
+                android:id="@+id/my_medicine_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+
+                android:layout_marginTop="32dp"
+                android:layout_marginStart="22dp"
+
+                android:text="@string/my_medicine"
+                style="@style/subtitle"
+                />
+
+            <View
+                android:id="@+id/division2"
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+
+                app:layout_constraintTop_toBottomOf="@id/my_medicine_tv"
+
+                android:layout_marginTop="4dp"
+
+                android:background="@color/any_200"
+                />
+
+            <RelativeLayout
+                android:id="@+id/my_medicine_box"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                app:layout_constraintTop_toBottomOf="@id/my_medicine_tv"
+                app:layout_constraintStart_toStartOf="parent"
+                >
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/my_medicine_rv"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+
+                    android:layout_marginTop="5dp"
+                    tools:listitem="@layout/my_medicine_item"
+                    tools:itemCount="4"
+
+                    android:nestedScrollingEnabled="false"
+                    />
+
+
+            </RelativeLayout>
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
     </LinearLayout>
 
 
