--- a/app/src/main/res/layout/fragment_take_add.xml
+++ b/app/src/main/res/layout/fragment_take_add.xml
@@ -6,8 +6,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.take.fragment.TakeAddFragment">
 
-    <FrameLayout
-        android:id="@+id/fragment"
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/fragment_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
