--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -10,6 +10,28 @@
     app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/search_lo_imageblock"
+        android:layout_width="match_parent"
+        android:layout_height="580dp"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="@+id/search_vp"
+        app:layout_constraintStart_toStartOf="@+id/search_vp"
+        app:layout_constraintTop_toBottomOf="@+id/search_lo_tab">
+
+        <ImageView
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+
+            android:scaleType="fitCenter"
+            android:src="@drawable/medicine_search"
+            app:tint="@color/any_200"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/search_lo_searchbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
