--- a/app/src/main/res/layout/fragment_cycle.xml
+++ b/app/src/main/res/layout/fragment_cycle.xml
@@ -31,11 +31,13 @@
 
     <TextView
         android:id="@+id/tv_cycle_name"
-        android:layout_width="wrap_content"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:text=""
         android:textColor="@color/dark_gray"
         style="@style/body_b"
+        android:inputType="text|textMultiLine"
+        android:scrollHorizontally="false"
         android:layout_marginTop="32dp"
         android:layout_marginStart="16dp"
         app:layout_constraintTop_toBottomOf="@+id/tv_cycle"
@@ -64,12 +66,12 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="120dp"
+        android:layout_marginTop="32dp"
         android:background="@drawable/user_cl_bg_light_gray"
         android:fillViewport="true"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/iv_back"
+        app:layout_constraintTop_toBottomOf="@+id/tv_cycle_form"
         app:layout_constraintBottom_toTopOf="@id/btn_next">
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/cl_cycle_alarm_add"
