--- a/app/src/main/res/layout/fragment_form.xml
+++ b/app/src/main/res/layout/fragment_form.xml
@@ -32,10 +32,12 @@
 
     <TextView
         android:id="@+id/tv_medicine_name"
-        android:layout_width="wrap_content"
+        android:layout_width="320dp"
         android:layout_height="wrap_content"
         style="@style/subtitle_b"
         android:textColor="@color/dark_gray"
+        android:inputType="text|textMultiLine"
+        android:scrollHorizontally="false"
         android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
         app:layout_constraintTop_toBottomOf="@id/tv_medicine_form"
