--- a/app/src/main/res/layout/fragment_name.xml
+++ b/app/src/main/res/layout/fragment_name.xml
@@ -48,9 +48,10 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cl_medicine_name"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="48dp"
         android:layout_marginHorizontal="28dp"
+        android:background="@drawable/user_tv_stroke_light_pink_12dp"
         app:layout_constraintTop_toBottomOf="@id/tv_medicine_name_explanation"
         app:layout_constraintStart_toStartOf="@id/iv_back">
 
@@ -60,24 +61,26 @@
             android:layout_height="32dp"
             android:src="@drawable/medicine"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="20dp"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="@id/et_medicine_name"/>
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
 
 
     <EditText
         android:id="@+id/et_medicine_name"
-        android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_width="240dp"
+        android:layout_height="wrap_content"
         android:hint="입력해주세요"
         android:textColorHint="@color/gray"
-        android:inputType="text"
+        android:inputType="text|textMultiLine"
+        android:scrollHorizontally="false"
         style="@style/body_b"
-        android:background="@drawable/user_tv_stroke_light_pink_12dp"
-        android:paddingStart="64dp"
-        android:paddingTop="4dp"
+        android:background="@android:color/transparent"
+        android:padding="16dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@id/iv_medicine"
+        app:layout_constraintEnd_toStartOf="@id/iv_delete"/>
 
         <ImageView
             android:id="@+id/iv_delete"
@@ -86,7 +89,8 @@
             android:src="@drawable/baseline_cancel_24dp"
             android:layout_margin="20dp"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="@id/et_medicine_name"/>
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
