--- a/app/src/main/res/layout/mypage_item_favorite.xml
+++ b/app/src/main/res/layout/mypage_item_favorite.xml
@@ -16,6 +16,15 @@
             android:scaleType="centerCrop"
             android:src="@drawable/choco" />
 
+        <ImageView
+            android:id="@+id/iv_delete"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/baseline_cancel_24dp"
+            android:layout_margin="16dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
         <TextView
             android:id="@+id/tv_medicine_name"
             style="@style/body_b"
@@ -51,7 +60,7 @@
             android:layout_marginBottom="32dp"
             android:background="@drawable/user_cl_bg_green_radius"
             android:gravity="center"
-            android:text="약국 주소"
+            android:text="약국 번호"
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
